overlap issue fixed

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,6 +6,7 @@
   justify-content: space-around;
   align-items: center;
   line-height: 5rem;
+  z-index: 1;
 }
 
 .logoHeader{
