--- a/src/screens/aboutUs/about.scss
+++ b/src/screens/aboutUs/about.scss
@@ -15,6 +15,7 @@
   // width: 100vw;
   // height: 100vh;
   margin-bottom: 100px;
+  z-index: -1;
   p{
     text-align: justify;
   }
